# website

./: Cargo.toml  README.md
data/seasons/: 1_investing.json
src/: main.rs
src/deep_dive/: mod.rs  search.rs
static/scripts/: episode.js  search.js
static/styles/: episode.css  search_results.css
templates/: episode.html  index.html  search_result.html  season.html
