[package]
name = "milton_2"
version = "0.1.0"
authors = ["Frederic Desgreniers <fredericdesgreniers@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7.12"
tera = "0.11.17"
serde = "1.0.79"
serde_json = "1.0.32"
serde_derive = "1.0.79"
failure = "0.1.2"
walkdir = "2.2.5"
env_logger = "0.5.13"
rayon = "1.0.2"
regex = "1.0.5"
notify = "4.0.6"